--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
   <title>Iraq War Documents Archive | Declassified Documents From the Iraq War</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js" integrity="sha512-UqYzmySEh6DXh20njgxWoxDvuA4qqM8FmKWTkRvkYsg7LjzjscbMHj06zbt3oC6kP2Oa7Qow6v/lGLeMywbvQg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js" integrity="sha512-UqYzmySEh6DXh20njgxWoxDvuA4qqM8FmKWTkRvkYsg7LjzjscbMHj06zbt3oC6kP2Oa7Qow6v/lGLeMywbvQg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.worker.min.js" integrity="sha512-jQV+iAyosXdea9ps2ETpxCAfALlMGuj+7QO3BhpTHfQf8FnOEUCnpwmsymNDnwB+H9rMMtcSPib9hQZsPLCxTw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf_viewer.min.js" integrity="sha512-uFNZFfUP6FeuFwkfmWzbi1LLRCXvy9xg/ihL2G1TVpS0tU74u/iqvUXUJT/nWJl8EDAlRnVX8c9qHsydaxux0g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf_viewer.min.css" integrity="sha512-p0IfbrMdZR9K3frD+U5xodiEuT9e3nEzfLRo29LqvB8jJVKbftQvRTkhCD1oYNVuhFOsfDTLahPrPuSM0eyAPg==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf_viewer.min.css" integrity="sha512-p0IfbrMdZR9K3frD+U5xodiEuT9e3nEzfLRo29LqvB8jJVKbftQvRTkhCD1oYNVuhFOsfDTLahPrPuSM0eyAPg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <app-root></app-root>
